--- a/app/src/main/res/layout/item_complaint.xml
+++ b/app/src/main/res/layout/item_complaint.xml
@@ -1,44 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <data>
         <variable
             name="complaint"
             type="com.example.collegefixit.model.Complaint" />
     </data>
-    <RelativeLayout
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp">
 
         <TextView
-            android:id="@+id/complaintTitle"
+            android:id="@+id/titleTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{complaint.title}"
-            android:textSize="18sp" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <TextView
-            android:id="@+id/complaintDescription"
+            android:id="@+id/descriptionTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{complaint.description}"
-            android:layout_below="@id/complaintTitle" />
-
-        <Button
-            android:id="@+id/upvoteButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Upvote"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true" />
+            app:layout_constraintTop_toBottomOf="@id/titleTextView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <TextView
             android:id="@+id/upvoteCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{String.valueOf(complaint.upvotes)}"
-            android:layout_toStartOf="@id/upvoteButton"
-            android:layout_alignBottom="@id/upvoteButton" />
+            app:layout_constraintTop_toBottomOf="@id/descriptionTextView"
+            app:layout_constraintStart_toStartOf="parent"/>
 
-    </RelativeLayout>
+        <Button
+            android:id="@+id/upvoteButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Upvote"
+            app:layout_constraintTop_toBottomOf="@id/descriptionTextView"
+            app:layout_constraintEnd_toEndOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
