--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#1F5BF3</color>
+    <color name="colorPrimaryDark">#0947E8</color>
+    <color name="colorAccent">#00A5FF</color>
+
+    <!--colors for modern UI-->
+    <color name="whiteTextColor">#FFF</color>
+    <color name="primaryTextColor">#2661FA</color>
+    <color name="loginBkColor">#F0F0F0</color>
+
+    <!--colors for card-->
+    <color name="whiteCardColor">#FFF</color>
 </resources>
