--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#1F5BF3</color>
     <color name="colorPrimaryDark">#0947E8</color>
     <color name="colorAccent">#00A5FF</color>
+    <color name="textfield">#99B7AD</color>
 
     <!--colors for modern UI-->
     <color name="whiteTextColor">#FFF</color>
