--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#0947E8</color>
     <color name="colorAccent">#00A5FF</color>
     <color name="textfield">#99B7AD</color>
+    <color name="Black"> #000000</color>
 
     <!--colors for modern UI-->
     <color name="whiteTextColor">#FFF</color>
