--- a/app/src/main/res/layout/fragment_complaints_list.xml
+++ b/app/src/main/res/layout/fragment_complaints_list.xml
@@ -13,25 +13,11 @@
         android:layout_height="match_parent"
         android:padding="16dp">
 
-        <!-- Fragment container for displaying different fragments -->
-        <FrameLayout
-            android:id="@+id/fragmentContainer"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/complaintsRecyclerView"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="@id/bottomNavigation"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-
-        <!-- Bottom Navigation Bar -->
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottomNavigation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?android:attr/windowBackground"
-            app:itemTextColor="@color/Black"
-            app:menu="@menu/bottom_nav_menu"
-            app:itemIconTint="@color/Black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
