--- a/app/src/main/res/layout/fragment_complaints_list.xml
+++ b/app/src/main/res/layout/fragment_complaints_list.xml
@@ -20,6 +20,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="60dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
