--- a/app/src/main/res/layout/item_complaint.xml
+++ b/app/src/main/res/layout/item_complaint.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -13,49 +14,83 @@
         android:layout_height="wrap_content"
         android:padding="16dp">
 
+        <!-- Complaint Title -->
         <TextView
             android:id="@+id/titleTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@{complaint.title}"
+            android:textAppearance="?attr/textAppearanceSubtitle1"
+            android:textColor="?attr/colorPrimary"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
+        <!-- Complaint Description -->
         <TextView
             android:id="@+id/descriptionTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@{complaint.description}"
+            android:textAppearance="?attr/textAppearanceBody2"
+            android:paddingTop="8dp"
             app:layout_constraintTop_toBottomOf="@id/titleTextView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
+        <!-- Upvote Count -->
         <TextView
             android:id="@+id/upvoteCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{String.valueOf(complaint.upvotes)}"
+            android:textAppearance="?attr/textAppearanceBody1"
+            android:textColor="?attr/colorOnSurface"
             app:layout_constraintTop_toBottomOf="@id/descriptionTextView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
-        <Button
-            android:id="@+id/upvoteButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Upvote"
-            app:layout_constraintTop_toBottomOf="@id/descriptionTextView"
-            app:layout_constraintStart_toEndOf="@id/upvoteCount"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+        <!-- Upvote Icon -->
+        <ImageView
+            android:id="@+id/upvoteIcon"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginStart="8dp"
+            android:clickable="true"
+            android:contentDescription="Upvote Icon"
+            android:focusable="true"
+            android:src="@drawable/normalup"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/deleteIcon"
+            app:layout_constraintTop_toBottomOf="@id/descriptionTextView" />
 
-        <Button
-            android:id="@+id/deleteButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Delete"
-            app:layout_constraintTop_toBottomOf="@id/descriptionTextView"
+        <!-- Delete Icon -->
+        <ImageView
+            android:id="@+id/deleteIcon"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginStart="8dp"
+            android:clickable="true"
+            android:contentDescription="Delete Icon"
+            android:focusable="true"
+            android:src="@drawable/delete"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@id/descriptionTextView"/>
+
+        <!-- Lottie Animation for Delete -->
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/deleteAnimationView"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_marginStart="8dp"
+            app:lottie_url="https://lottie.host/21a9fa24-444e-4805-b319-28442b35fd7b/2LwmIJN9Ra.json"
+            app:lottie_autoPlay="false"
+            app:lottie_loop="false"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/descriptionTextView"
+            android:visibility="gone"/> <!-- Initially hidden -->
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
