--- a/app/src/main/res/layout/item_complaint.xml
+++ b/app/src/main/res/layout/item_complaint.xml
@@ -90,7 +90,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/descriptionTextView"
-            android:visibility="gone"/> <!-- Initially hidden -->
+            android:visibility="gone"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
