--- a/app/src/main/res/layout/activity_item_guard_complaint.xml
+++ b/app/src/main/res/layout/activity_item_guard_complaint.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -33,9 +32,18 @@
                 android:textStyle="bold"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintEnd_toStartOf="@id/statusIcon"/>
 
-            <!-- Complaint Description -->
+
+            <!-- Status Icon -->
+            <ImageView
+                android:id="@+id/statusIcon"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <!-- Complaint Description (truncated) -->
             <TextView
                 android:id="@+id/descriptionTextView"
                 android:layout_width="0dp"
@@ -43,6 +51,8 @@
                 android:text="@{complaint.description}"
                 android:textAppearance="?attr/textAppearanceBody2"
                 android:textColor="@color/white"
+                android:maxLines="2"
+                android:ellipsize="end"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@id/titleTextView"
                 app:layout_constraintStart_toStartOf="parent"
@@ -60,6 +70,17 @@
                 app:layout_constraintTop_toBottomOf="@id/descriptionTextView"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
+
+            <!-- More Details Icon -->
+            <ImageView
+                android:id="@+id/moreDetailsIcon"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/details"
+                android:clickable="true"
+                app:layout_constraintTop_toTopOf="@id/upvoteCount"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="@id/upvoteCount"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
