Added Status for Guard

--- a/app/src/main/res/layout/activity_item_guard_complaint.xml
+++ b/app/src/main/res/layout/activity_item_guard_complaint.xml
@@ -40,6 +40,9 @@
                 android:id="@+id/statusIcon"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
+                android:clickable="true"
+                android:src="@drawable/pending"
+                android:visibility="visible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
